--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="app.heartie.heartie">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
